--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,35 @@
+@import url('https://fonts.googleapis.com/css?family=Bangers|Cinzel:400,700,900|Lato:100,300,400,700,900|Lobster|Lora:400,700|Mansalva|Muli:200,300,400,600,700,800,900|Open+Sans:300,400,600,700,800|Oswald:200,300,400,500,600,700|Roboto:100,300,400,500,700,900&display=swap');
+
+
 #logo {
-    position: absolute;
-    top: 0;
-    left: 0;
     height: 250px;
     width: 150px;
+    mix-blend-mode: multiply;
+    filter: contrast(1);
+}
+
+body {
+    background: green
+}
+
+.title {
+    color: #fff;
+    font-weight: 300;
+    font-size: 50px;
+    line-height: 0.65;
+    font-family: 'Lobster', cursive;
+}
+
+.motto {
+    font-size: 14px;
+    color: #fff;
+    font-weight: 400;
+    text-transform: capitalize;
+    font-style: italic;
+    font-family: 'Lora', cursive;
+}
+
+.container {
+    text-align: center;
+    top: 0;
 }
