--- a/templates/base.html
+++ b/templates/base.html
@@ -1,60 +1,37 @@
 {% load static %}
+{% load meta %}
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+<head {% meta_namespaces %}>
+<!--    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Greenie Health{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
-<!--    <meta name="google" content="notranslate" />
+    <meta name="google" content="notranslate" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="{% block description %}This is my blog where I share my thoughts and opinions.{% endblock %}">
     <meta name="robots" content="index, follow"> -->
     {% include 'meta/meta.html' %}
-    <!-- Bootstrap CDN links -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.1/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.1/js/bootstrap.bundle.min.js"></script>
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+<!--    <link href="{% static 'css/navbar.css' %}" rel="stylesheet">
+ <!-- Bootstrap CDN links -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
     <link rel="icon" type="image/png" sizes="32*32" href="{% static 'images/favicon32.png' %}"/>
-    <link rel="icon" type="image/png" sizes="48x48" href="{% static 'images/favicon48.png' %}"/>
-    <link rel="icon" type="image/png" sizes="96x96" href="{% static 'images/favicon96.png' %}"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicon180.png' %}"/>
-    <link rel="icon" type="image/png" sizes="192x192" href="{% static 'images/favicon192.png' %}"/>
-    <link rel="icon" type="image/png" sizes="512x512" href="{% static 'images/favicon512.png %}"/>
+    <link rel="icon" type="image/png" sizes="48*48" href="{% static 'images/favicon48.png' %}"/>
+    <link rel="icon" type="image/png" sizes="96*96" href="{% static 'images/favicon96.png' %}"/>
+    <link rel="apple-touch-icon" sizes="180*180" href="{% static 'images/favicon180.png' %}"/>
+    <link rel="icon" type="image/png" sizes="192*192" href="{% static 'images/favicon192.png' %}"/>
+    <link rel="icon" type="image/png" sizes="512*512" href="{% static 'images/favicon512.png' %}"/>
 </head>
 <body>
-    <img id="logo" src="{% static 'images/logo.png' %}" alt="Greenie Health Logo - Blog on Health Tips" title="Greenie Health Logo">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">My Website</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-                </li>
-              </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Jumbotron -->
+    {% include 'navbar.html' %}
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4">Hello, world!</h1>
-          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          <h1 class="display-4 title">Greenie Health</h1>
+          <p class="lead motto">Top Trending Discoveries</p>
         </div>
     </div>
 
@@ -70,6 +47,7 @@
     </footer>
 
 </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <script src="{% static 'js/change_image.js' %}"></script>  
 </html>
 
